2008-07-15  Adrian Robert <Adrian.B.Robert@gmail.com>

	* .cvsignore: Add mac-fix-env.
	* mac-fix-env.m: New file, automatically update
	~/.MacOSX/environment.plist on OS X systems to expose environment
	variables inside Emacs started from icon.
	* Makefile.in: Add -universal to CFLAGS on OS X, add mac-fix-env to
	programs to build.
	* make-docfile.c: Add .m to list of file extensions.

2008-07-12  Dan Nicolaescu  <dann@ics.uci.edu>

	* movemail.c (main): Use int instead of WAITTYPE.

2008-07-05  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in (OTHER_PLATFORM_SUPPORT):
	Remove vmsproc.el and vms-patch.el.

2008-06-26  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in (obj): Remove w32bdf.o.

2008-06-26  Dan Nicolaescu  <dann@ics.uci.edu>

	* fakemail.c: Remove references to obsolete variables.

2008-06-02  Jim Meyering  <meyering@redhat.com>

	* ebrowse.c (xfree): Remove definition; s/xfree/free/.

	Remove useless if-before-free tests.
	* ebrowse.c (xfree): Likewise.
	* etags.c (process_file_name, free_tree, free_fdesc): Likewise.
	(popclass_above, Prolog_functions, Erlang_functions): Likewise.
	* pop.c (pop_quit): Likewise.

2008-05-30  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in (lisp2): Add minibuffer.elc.

2008-05-29  Tom Tromey  <tromey@redhat.com>

	* etags.c (relative_filename): Treat "///" like "/" in filenames.

2008-05-09  Eli Zaretskii  <eliz@gnu.org>

	* ntlib.c: Include sys/types.h, sys/stat.h, and errno.h.
	(IS_DIRECTORY_SEP): New macro.
	(convert_time, is_exec, stat): New functions.

2008-05-08  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in (lisp2): Rename epa-file-hook.elc to epa-hook.elc.

2008-05-03  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in (lisp2): Add epa-file-hook.elc, to track the
	corresponding change in src/Makefile.in.

2008-04-24  Adam Gołębiowski  <adamg@pld-linux.org>  (tiny change)

	* Makefile.in (etags${EXEEXT}, ctags${EXEEXT}): Fix quote typo.

2008-04-10  Jason Rumney  <jasonr@gnu.org>